@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.14...]
+### 2020-07-07
+	Fixed: Network status logging was not ignoring duplicate reports properly.
 ### 2020-06-29
 	Fixed: DynDNS debug output was confused.
 	Removed: Don't complain about watchlist rules with insufficient actions. This was done poorly.
